# wikiconv-mongodb

./: .gitignore  README.md  build-wikiconv-ca.sh  build-wikiconv-en.sh  build-wikiconv-es.sh  build-wikiconv-it.sh  create-index.py  generate-support-collection.py  pyproject.toml
collection-generators/: generate-user-collection.py
