[tool.poetry]
name = "wikiconv-mongodb"
version = "0.1.0"
description = ""
authors = ["nicolatoscan <nicolatoscan99@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.11.2"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
